# Blandwork

./: .gitignore  Cargo.toml  LICENSE  README.md
blandwork/: Cargo.toml
blandwork/src/: app.rs  config.rs  context.rs  db.rs  feature.rs  layout.rs  lib.rs  session.rs  template.rs
blandwork/src/features/: mod.rs
blandwork/src/features/content/: README.md  mod.rs
examples/sample_web/: Cargo.toml
examples/sample_web/src/: main.rs
sample_app/: Cargo.toml  README.md  package-lock.json  tailwind.config.js
sample_app/src/: layout.rs  main.rs  navigator.rs  template.rs
sample_app/templates/: endpoint.html  shell.html
sample_app/templates/nested/: template.html
sample_app/web/css/: input.css
src/: app.rs  config.rs  context.rs  feature.rs  lib.rs  middleware.rs  navigator.rs  template.rs  theme.rs
web/: htmx_integration.js
