[package]
name = "blandwork"
version = "0.1.1"
authors = ["bland <NothingsBland@proton.me>"]
edition = "2021"

[lib]
name = "blandwork"
path = "src/lib.rs"

[features]
default = [ ]

[dependencies]
axum = { version = "0.7.5" }
axum-core = { version = "0.4.3" }
axum-htmx = { version = "0.5.0", features = ["guards"] }
maud = { version = "*", features = ["axum"]}
bb8 = { version = "0.8.3" }
bb8-postgres = { version = "0.8.1" }
hyper-util = { version = "0.1.3" }
hyper = { version = "1.2.0", features = ["full"]}
http-body = { version = "1" }
http-body-util = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.94" }
toml = { version = "0.8.12" }
tokio-postgres = { version = "0.7" }
tokio = { version = "1.25", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.0", features = ["fs", "trace", "compression-gzip", "cors", "timeout"] }
tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
once_cell = { version = "1.15.0" }
uuid = { version = "1.8.0", features = [ "v4" ] }