[package]
name = "blandwork"
version = "0.1.1"
authors = ["bland <NothingsBland@proton.me>"]
edition = "2021"

[lib]
name = "blandwork"
path = "src/lib.rs"

[features]
default = [ ]

[dependencies]
async-trait = { version = "0.1.74" }
axum = { version = "0.7.5", features = ["default", "macros", "multipart"] }
axum-core = { version = "0.4.3" }
axum-htmx = { version = "0.5.0", features = ["guards"] }
minijinja = { version = "2.0.3", features = ["default", "v_htmlescape", "loader"] }
minijinja-autoreload = { version = "2.0.3" }
bb8 = { version = "0.8.3" }
bb8-postgres = { version = "0.8.1" }
hyper-util = { version = "0.1.3" }
hyper = { version = "1.2.0", features = ["full"]}
http-body = { version = "1" }
http-body-util = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.94" }
toml = { version = "0.8.12" }
tokio-postgres = { version = "0.7" }
tokio = { version = "1.25", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.0", features = ["fs", "trace", "compression-gzip", "cors", "timeout"] }
tower-sessions = { version = "0.12.2" }
tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter"] }
uuid = { version = "1.8.0", features = [ "v4", "fast-rng" ] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
once_cell = { version = "1.15.0" }
