[package]
name = "sample-web"
version = "0.1.1"
authors = ["bland <NothingsBland@proton.me>"]
edition = "2021"
publish = false

[dependencies]
blandwork = { path = "../blandwork" }
axum = { version = "0.7.5" }
maud = { version = "*", features = ["axum"]}
tokio = { version = "1.25", features = ["full"] }
tracing = { version = "0.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.94" }