[package]
name = "sample-web"
version = "0.1.1"
authors = ["bland <NothingsBland@proton.me>"]
edition = "2021"
publish = false

[dependencies]
blandwork = { path = "../blandwork" }
axum = { version = "0.7.5", features = ["default", "macros", "multipart"] }
tokio = { version = "1.25", features = ["full"] }
tracing = { version = "0.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.94" }
minijinja = { version = "2.0.3", features = ["default", "v_htmlescape", "loader"] }
minijinja-autoreload = { version = "2.0.3" }